--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
   docs:
     runs-on: ubuntu-latest
 
+    # 添加权限配置
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
         with:
